sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:4: error: value count is not a member of Unit
                    {test=true; for (i<-beg to x) {if (isSmaller((i+1), i)) {swap((i+1), i); test=false; x=x-1}; if (isSmaller((x-count), (x-count-1))) {swap((x-i), (x-i-1)); test=false; beg=beg+1}; count=count+1} count=0}
                                                                                                                                                                                                                      ^